--- a/keystore-mongo/pom.xml
+++ b/keystore-mongo/pom.xml
@@ -154,6 +154,10 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.2.0.Final</version>
+        </dependency>
     </dependencies>
 </project>
